[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Story_2.gd" type="Script" id=1]
[ext_resource path="res://FFFFORWA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://KoalaTree.tscn" type="PackedScene" id=3]
[ext_resource path="res://Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Koala_ziek.png" type="Texture" id=5]
[ext_resource path="res://Sprites/popupbh.png" type="Texture" id=6]
[ext_resource path="res://Sprites/popupbv.png" type="Texture" id=7]
[ext_resource path="res://DialoguePlayer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/DialogueBox.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
extra_spacing_char = 2
font_data = ExtResource( 2 )

[node name="Story_2" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="DialogueBox" type="Control" parent="."]
margin_left = 113.0
margin_top = 141.0
margin_right = 777.0
margin_bottom = 568.0
rect_clip_content = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitRight" type="TextureRect" parent="DialogueBox"]
margin_left = 408.0
margin_top = 48.0
margin_right = 664.0
margin_bottom = 296.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitLeft" type="TextureRect" parent="DialogueBox"]
margin_left = 1.90735e-06
margin_right = 256.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="ColorRect" parent="DialogueBox"]
margin_left = 24.0
margin_top = 256.0
margin_right = 640.0
margin_bottom = 400.0
color = Color( 0.568627, 0.466667, 0.0941176, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Borders" type="Control" parent="DialogueBox/Panel"]
margin_left = -24.0
margin_top = -24.0
margin_right = -24.0
margin_bottom = -24.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="border_right2" type="TextureRect" parent="DialogueBox/Panel/Borders"]
margin_top = 24.0
margin_right = 24.0
margin_bottom = 168.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border_top" type="TextureRect" parent="DialogueBox/Panel/Borders"]
margin_left = -32.0
margin_right = 696.0
margin_bottom = 248.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
flip_h = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border_top2" type="TextureRect" parent="DialogueBox/Panel/Borders"]
margin_left = -48.0
margin_top = -56.0
margin_right = 680.0
margin_bottom = 192.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="border_right3" type="TextureRect" parent="DialogueBox/Panel/Borders"]
margin_left = 640.0
margin_top = 24.0
margin_right = 664.0
margin_bottom = 168.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="DialogueBox/Panel"]
margin_left = 24.0
margin_top = 16.0
margin_right = 108.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="DialogueBox/Panel"]
margin_left = 24.0
margin_top = 56.0
margin_right = 488.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
text = "De tekst uit de JSON komt hier te staan.
LET OP ENTERS!!!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="DialogueBox/Panel"]
margin_left = 498.202
margin_top = 100.6
margin_right = 596.202
margin_bottom = 122.6
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.411765, 0.0705882, 0.0705882, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "klik hier"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End" type="Button" parent="DialogueBox/Panel"]
margin_left = 498.202
margin_top = 100.6
margin_right = 596.202
margin_bottom = 122.6
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "klik hier"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialoguePlayer" parent="DialogueBox" instance=ExtResource( 8 )]

[node name="KoalaTree" parent="." instance=ExtResource( 3 )]
position = Vector2( 1024, 0 )

[node name="KoalaBed" type="Sprite" parent="."]
position = Vector2( 872, 160 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="End" type="Timer" parent="."]
one_shot = true
[connection signal="dialogue_ended" from="DialogueBox" to="." method="_on_DialogueBox_dialogue_ended"]
[connection signal="koala_down" from="DialogueBox" to="." method="_on_DialogueBox_koala_down"]
[connection signal="pressed" from="DialogueBox/Panel/Next" to="DialogueBox" method="_on_Next_pressed"]
[connection signal="pressed" from="DialogueBox/Panel/End" to="DialogueBox" method="_on_End_pressed"]
[connection signal="finished" from="DialogueBox/DialoguePlayer" to="DialogueBox" method="_on_DialoguePlayer_finished"]
[connection signal="timeout" from="End" to="." method="_on_End_timeout"]
